src/test/deca/syntax/invalid/lexically_invalid/unknown_token_11.deca
// Description:
//    Tests a syntactically incorrect program with an unknown token
//
// Results:
//    Line 11 : Error, unknown token.
//
// History:
//    created on 17/12/2024


[